2007-07-14  Jonathon Jongsma  <jjongsma@gnome.org>

	* configure.in: post-release version number bump

=== 1.4.2 ===

2007-07-14  Jonathon Jongsma  <jjongsma@gnome.org>

	* NEWS: updated for 1.4.2 release
	* configure.in: bumped version to 1.4.2

2007-06-14  Dave Beckett  <dave@dajobe.org>

	* configure.in: Update the GENERIC_LIBRARY_VERSION correctly
	Was: 1:0:0 in 1.2.4
	current: interfaces were added, increment to 2
	revision: set to zero since current was incremented
	age: increment since interfaces were added
	Changed to: 2:0:1

2007-06-14  Murray Cumming  <murrayc@murrayc.com>

	* cairomm/refptr.h: Added RefPtr(object, refcount) constructor
	for use in cast_*(), so that the casted RefPtr shares the same 
	refcount, avoiding an early deletion. I do not like making 
	this constructor public, but I do not see another way.

=== 1.4.0 ===

2007-07-12  Jonathon Jongsma  <jjongsma@gnome.org>

	* Makefile.am: add doc-publish target and make release-publish depend on
	this.  This automatically uploads the new API documentation on release
	* docs/reference/Makefile.am: upload the html documentation and a tarball of
	the documentation to the cairographics.org site

2007-07-12  Jonathon Jongsma  <jjongsma@gnome.org>

	* docs/reference/Makefile.am: hacky workaround to get distcheck to pass

2007-07-10  Jonathon Jongsma  <jjongsma@gnome.org>

	* NEWS: Update NEWS for release
	* configure.in: bump version for release

2007-07-10  Jonathon Jongsma  <jjongsma@gnome.org>

	* cairomm/context.cc: add ability to use dynamic casting with the return
	values from more functions, including:
		Context::get_target()
		Context::get_target() const
		Context::get_source()
		Context::get_source() const
		Context::get_group_target()
		Context::get_group_target() const
		Context::pop_group()
	* tests/test-context.cc: a few additional tests to verify the const /
	non-const versions both work with dynamic casting.

2007-07-10  Jonathon Jongsma  <jjongsma@gnome.org>
